--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,7 +3,7 @@
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), data: {turbo: false}) do |f| %>
   <%= f.error_notification %>
 
-  <div class="form-inputs">
+  <div class="col-12 mb-3" class="form-inputs">
     <%= f.input :email,
                 required: true,
                 autofocus: true,
@@ -17,7 +17,7 @@
                 input_html: { autocomplete: "new-password" } %>
   </div>
 
-  <div class="form-actions">
+  <div class="col-12 mb-3" class="form-actions">
     <%= f.button :submit, "Sign up" %>
   </div>
 <% end %>
