--- a/app/views/bags/show.html.erb
+++ b/app/views/bags/show.html.erb
@@ -4,3 +4,8 @@ date picker)
 category
 color
 brand %>
+<div class="container">
+  <div class="container-top">
+    <%= image_tag "bag.jpeg", class: "img-bag" %>
+    
+</div>
