Fixing images for heroku

--- a/app/views/bags/index.html.erb
+++ b/app/views/bags/index.html.erb
@@ -7,7 +7,7 @@
       <% @bags.each do |bag| %>
         <div class="card col-6">
           <%= link_to bag_path(bag) do %>
-            <%= image_tag "bag.jpeg", class: "img-bag" %>
+            <%= image_tag "bag.jpg", class: "img-bag" %>
           <% end %>
           <div class="content">
               <h3><%= bag.brand %></h3>
