--- a/app/views/bags/show.html.erb
+++ b/app/views/bags/show.html.erb
@@ -6,6 +6,6 @@ color
 brand %>
 <div class="container">
   <div class="container-top">
-    <%= image_tag "bag.jpeg", class: "img-bag" %>
-    
+    <%= image_tag "bag.jpg", class: "img-bag" %>
+
 </div>
