--- a/app/views/bags/show.html.erb
+++ b/app/views/bags/show.html.erb
@@ -7,5 +7,30 @@ brand %>
 <div class="container">
   <div class="container-top">
     <%= image_tag "bag.jpg", class: "img-bag" %>
+  </div>
 
+  <div class="container-bottom">
+    <h3>Dates</h3>
+    <p>21/11/2022 > End date </p>
+     <div>
+      <input type="checkbox" id="cancellation-gurantee" name="Cancellation-guarantee">
+      <label for="cancellation-gurantee">Cancellation guarantee: +3€</label>
+    </div>
+
+    <div>
+      <input type="checkbox" id="damage-guarantee" name="damage-guarantee">
+      <label for="damage-guarantee">Damage guarantee: +35€</label>
+    </div>
+
+     <div>
+      <input type="checkbox" id="personnalized-delivery" name="personnalized-delivery">
+      <label for="personnalized-delivery">Personnalized delivery: +9€</label>
+    </div>
+
+    <h3>Description</h3>
+    <p>Découvrez toutes les dernières nouveautés de la collection "Le Papier". Profitez de la livraison et des retours offerts. Bobs. Accessoires. Sacs. Robes.
+       T-shirts. Mailles. Chaussures.</p>
+
+    
+  </div>
 </div>
