--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -4,3 +4,18 @@
 @import "form_legend_clear";
 @import "navbar";
 @import "bag_index";
+
+
+.content > h3 {
+  font-weight: bolder;
+  font-size: 13px;
+  line-height: 10px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.content > h4 {
+  font-size: 13px;
+  font-weight: lighter;
+  font-family: Arial, Helvetica, sans-serif;
+  line-height: 10px;
+}
