--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,6 +11,8 @@
 @import "components/index";
 @import "pages/index";
 @import "components/footer";
+@import "pages/booking";
+
 body {
   background-color: white;
 }
