--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,4 +1,25 @@
-<h2>My bookings </h2>
+<div class="mbook">
+  <h2>My bookings</h2>
+</div>
 <% @bookings.each do |booking| %>
-  <p>You booked the <%= booking.bag.brand %> bag from the <%= booking.start_date %> to the <%= booking.end_date %> </p>
+<div class="booking">
+  <ul>
+    <li>
+      <input type="checkbox" id="Delete bag" name="Delete bag">
+      <label for="Delete bag"><p>You booked the <strong><%= booking.bag.brand %></strong> bag from the <strong><%= booking.start_date %></strong> to the <strong><%= booking.end_date %></strong><p>
+    </li>
+  </ul>
+</div>
 <% end %>
+
+<div class="total">
+  <strong><p> Your total is: €€€<p></strong>
+</div>
+
+<div class="out">
+  <p>Go to Check Out<p>
+</div>
+
+<div class="delete">
+  <p>Delete your selection<p>
+</div>
