--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,52 +11,5 @@
 @import "components/index";
 @import "pages/index";
 @import "components/footer";
-body {
-  background-color: white;
-}
-
-img {
-  border-radius: 20px;
-  text-align: center;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 200px;
-}
-
-.title {
-  text-align: center;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 25px;
-  margin-top: 20px;
-  margin-bottom: 20px;
-}
-
-.boxes {
-  display: block;
-  padding-left: 40px;
-  padding-right: 40px;
-}
-
-.form-actions {
-  background-color: #B89498;
-  width: 200px;
-  border-radius: 15px;
-  text-align: center;
-}
-
-#bouton {
-  display: block;
-  margin: auto;
-  padding-left: 60px;
-  padding-right: 60px;
-}
-
-.link {
-  display: block;
-  margin-top: 40px;
-  padding-left: 60px;
-  padding-right: 60px;
-  text-align: center;
-  font-size: 11px;
-}
+@import "pages/login";
+@import "pages/show";
