--- a/app/views/bags/show.html.erb
+++ b/app/views/bags/show.html.erb
@@ -14,29 +14,29 @@ brand %>
     <%= simple_form_for [@bag, @booking] do |f| %>
       <%= f.input :start_date, as: :date, html5: true %>
       <%= f.input :end_date, as: :date, html5: true %>
-      <%= f.button :submit %>
+      <%= f.button :submit, class:"button-createbooking"%>
     <% end %>
 
-    <div>
-      <input type="checkbox" id="cancellation-gurantee" name="Cancellation-guarantee">
-      <label for="cancellation-gurantee">Cancellation guarantee: +3€</label>
+    <div class="ensemble-checkbox">
+      <div>
+        <input type="checkbox" id="cancellation-gurantee" name="Cancellation-guarantee">
+        <label for="cancellation-gurantee">Cancellation guarantee: +3€</label>
+      </div>
+
+      <div>
+        <input type="checkbox" id="damage-guarantee" name="damage-guarantee">
+        <label for="damage-guarantee">Damage guarantee: +35€</label>
+      </div>
+
+      <div class="personnalized-delivery">
+        <input type="checkbox" id="personnalized-delivery" name="personnalized-delivery">
+        <label for="personnalized-delivery">Personnalized delivery: +9€</label>
+      </div>
+
+      <h3>Description</h3>
+      <p class="description-produit">Découvrez toutes les dernières nouveautés de la collection "Le Papier". Profitez de la livraison et des retours offerts. Bobs. Accessoires. Sacs. Robes.
+        T-shirts. Mailles. Chaussures.</p>
     </div>
-
-    <div>
-      <input type="checkbox" id="damage-guarantee" name="damage-guarantee">
-      <label for="damage-guarantee">Damage guarantee: +35€</label>
-    </div>
-
-     <div>
-      <input type="checkbox" id="personnalized-delivery" name="personnalized-delivery">
-      <label for="personnalized-delivery">Personnalized delivery: +9€</label>
-    </div>
-
-    <h3>Description</h3>
-    <p>Découvrez toutes les dernières nouveautés de la collection "Le Papier". Profitez de la livraison et des retours offerts. Bobs. Accessoires. Sacs. Robes.
-       T-shirts. Mailles. Chaussures.</p>
-
 
   </div>
 </div>
-
