--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,8 @@
   <body>
     <%= render "shared/navbar" %>
     <%= yield %>
-    <%= render "shared/footer" %>
+    <% if user_signed_in? %>
+      <%= render "shared/footer" %>
+    <% end %>
   </body>
 </html>
