--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,8 +1,7 @@
 <footer id="sticky-footer" class="flex-shrink-0 py-4 text-white-50 sticky-bottom">
-
   <div class="container text-center d-flex justify-content-evenly text-center">
   <%= link_to "/", class: "mon_lien" do  %>
-    <button class="btn"><i class="fa fa-home"></i> Home</button>
+    <button class="btn buttonhome"><i class="fa fa-home"></i> Home</button>
     <% end %>
     <i id= "caddie" class="fa-solid fa-cart-shopping"></i>
     <i id= "user" class="fa-solid fa-user"></i>
