--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,8 +1,11 @@
+body {
+  padding-bottom: 56px;
+}
+
 #sticky-footer{
 background-color: #EAD7D6;
 border-top-right-radius: 15px;
 border-top-left-radius: 15px;
-position: sticky;
 width: 100%;
 height: 55px;
 display: flex;
