--- a/app/views/bags/new.html.erb
+++ b/app/views/bags/new.html.erb
@@ -1,2 +1,9 @@
+<%= simple_forme_for @bag do |f|%>
+<%= f.input :brand%>
+<%= f.input :color%>
+<%= f.input :category%>
 
+<%= f.input :photo, as: :file %>
+
+<% end %>
   <h1>Add a new bag</h1>
