--- a/app/views/bags/index.html.erb
+++ b/app/views/bags/index.html.erb
@@ -16,7 +16,7 @@
       <% @bags.each do |bag| %>
         <div class="card col-6 col-lg-3 border border-white">
           <%= link_to bag_path(bag) do %>
-           <%= cl_image_tag @bag.photo.key, height: 300, width: 400, crop: :fill %>
+           <%= cl_image_tag bag.photo.key, height: 200, width: 200, crop: :fill %>
           <% end %>
           <div class="content">
               <p class="h3"><%= bag.brand.capitalize %></p>
@@ -28,5 +28,3 @@
     </div>
   </div>
 </div>
-
-
