--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -16,10 +16,6 @@
   <strong><p> Your total is: €€€<p></strong>
 </div>
 
-<div class="out">
-  <p>Go to Check Out<p>
-</div>
-
 <div class="delete">
-  <p>Delete your selection<p>
+  <%= link_to "Delete your selection", bookings_path %>
 </div>
