--- a/app/assets/stylesheets/pages/_booking.scss
+++ b/app/assets/stylesheets/pages/_booking.scss
@@ -1,11 +1,3 @@
-.booking {
-  width: 1000px;
-  margin-top: 4px;
-  margin-bottom: 15px;
-  padding-left: 70px;
-  padding-right: 60px;
-}
-
 ul {
   list-style: none;
 }
@@ -17,6 +9,7 @@ li {
 .mbook {
   margin-left: 60px;
   margin-bottom: 55px;
+  margin-right: 60px;
 }
 
 .total {
@@ -42,4 +35,14 @@ li {
   width: 250px;
   border-radius: 15px;
   text-align: center;
+}
+
+.selection {
+  border-top-right-radius: 15px;
+  border-top-left-radius: 15px;
+  width: 100%;
+  height: 55px;
+  display: flex;
+  align-content: center;
+  align-items: center;
 }
