--- a/app/assets/stylesheets/pages/_booking.scss
+++ b/app/assets/stylesheets/pages/_booking.scss
@@ -3,7 +3,13 @@ ul {
 }
 
 li {
-  display: inline;
+  display: flex;
+  align-content: center;
+}
+
+p {
+  padding-top: 15px;
+  padding-left: 15px;
 }
 
 .mbook {
