lien pété de l'espace qui renvoie au calendar

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -5,6 +5,8 @@
     <% end %>
     <i id= "caddie" class="fa-solid fa-cart-shopping"></i>
     <i id= "user" class="fa-solid fa-user"></i>
+  <%= link_to "bookings", class: "mon_lien" do  %>
     <i id= "calendar" class="fa-regular fa-calendar-days"></i>
+      <% end %>
   </div>
 </footer>
