--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -25,7 +25,7 @@ align-items: center;
   text-decoration: none;
 }
 .mon_lien :hover {
-  color: white;
+  color: rgb(0, 0, 0);
 }
 .fa{
   padding: 10px;
@@ -47,6 +47,6 @@ align-items: center;
 
 #calendar{
   color: black;
-  margin-top: auto;
+  margin-top: 13px;
   margin-bottom: auto;
 }
