--- a/app/views/bags/new.html.erb
+++ b/app/views/bags/new.html.erb
@@ -1,5 +1,5 @@
 <h1>Add a new bag</h1>
-<%= simple_form_for(@bag) do |f| %>
+<%= simple_form_for @bag do |f| %>
   <%= f.input :brand,
               placeholder:"Brand",
               label: false %>
