--- a/app/views/bags/new.html.erb
+++ b/app/views/bags/new.html.erb
@@ -10,5 +10,6 @@
               placeholder:"Price",
               label: false %>
   <%= f.input :photo, as: :file %>
-  <%= f.submit %>
+  <%= f.submit "submit", id: "test2" %>
+
 <% end %>
