--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -6,5 +6,8 @@
     <i id= "caddie" class="fa-solid fa-cart-shopping"></i>
     <i id= "user" class="fa-solid fa-user"></i>
     <i id= "calendar" class="fa-regular fa-calendar-days"></i>
+    <%= link_to new_bag_path do %>
+    <i id= "plus-bag" class="fa-solid fa-plus"></i>
+    <% end %>
   </div>
 </footer>
