--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -50,3 +50,9 @@ align-items: center;
   margin-top: auto;
   margin-bottom: auto;
 }
+
+#plus-bag{
+  color: black;
+  margin-top: 13px;
+  margin-bottom: auto;
+}
