--- a/app/views/bags/index.html.erb
+++ b/app/views/bags/index.html.erb
@@ -1,14 +1,15 @@
 <div class="container" >
   <div class="top-container">
 
-<%= form_with url: bags_path, method: :get, class: "d-flex" do %>
-  <%= text_field_tag :query,
-    params[:query],
-    class: "form-control",
-    placeholder: "Find a bag"
-  %>
-  <%= submit_tag "Search", class: "btn btn-primary" %>
-<% end %>
+    <%= form_with url: bags_path, method: :get, class: "d-flex" do %>
+      <%= text_field_tag :query,
+        params[:query],
+        class: "form-control",
+        id: "search-bar",
+        placeholder: "Find a bag ..."
+      %>
+      <%= submit_tag "Search", class: "btn btn-primary", id: "search-button"%>
+    <% end %>
 
   </div>
   <div class="main-container">
