--- a/app/views/bags/show.html.erb
+++ b/app/views/bags/show.html.erb
@@ -5,16 +5,17 @@ category
 color
 brand %>
 <div class="container">
-  <div class="container-top">
+  <div class="container-top-img">
     <%= cl_image_tag @bag.photo.key, height: 200, width: 200, crop: :fill %>
   </div>
 
   <div class="container-bottom">
     <h3>Dates</h3>
     <%= simple_form_for [@bag, @booking] do |f| %>
-      <%= f.input :start_date, as: :date, html5: true %>
-      <%= f.input :end_date, as: :date, html5: true %>
+      <%= f.input :start_date, as: :date, html5: true, label: "Start:"%>
+      <%= f.input :end_date, as: :date, html5: true, label: "End:"%>
       <%= f.check_box :cancellation_guarantee, as: :boolean %>
+
       <label for="cancellation-gurantee">Cancellation guarantee: +3€</label>
       <br>
       <%= f.check_box :damage_guarantee, label: "on sen fout" %>
@@ -23,7 +24,8 @@ brand %>
       <%= f.check_box :personnalized_shipping %>
       <label for="personnalized-delivery">Personnalized delivery: +9€</label>
       <br>
-      <%= f.button :submit %>
+
+      <%= f.button :submit, "Create Booking", id: "test" %>
     <% end %>
     <br>
 
