--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -5,8 +5,9 @@
     <% end %>
     <i id= "caddie" class="fa-solid fa-cart-shopping"></i>
     <i id= "user" class="fa-solid fa-user"></i>
-  <%= link_to "bookings", class: "mon_lien" do  %>
+  <%= link_to bookings_path, class: "mon_lien" do  %>
     <i id= "calendar" class="fa-regular fa-calendar-days"></i>
+      <% end %>
     <%= link_to new_bag_path do %>
     <i id= "plus-bag" class="fa-solid fa-plus"></i>
     <% end %>
