--- a/app/views/bags/new.html.erb
+++ b/app/views/bags/new.html.erb
@@ -6,7 +6,7 @@
   <%= f.input :category,
               placeholder:"Category",
               label: false %>
-  <%= f.input :color,
+  <%= f.input :price,
               placeholder:"Price",
               label: false %>
   <%= f.input :photo, as: :file %>
