changed the layout of the images and description

--- a/app/views/bags/index.html.erb
+++ b/app/views/bags/index.html.erb
@@ -22,7 +22,7 @@
           <div class="content">
               <p class="h3"><%= bag.brand.split(" ").map{|w| w.capitalize }.join(" ") %></p>
               <p class="h4"><%= bag.category.capitalize %></p>
-              <p class="h4"><%= bag.price %>€</p>
+              <p id="pricetag" class="h4"><%= bag.price %>€</p>
           </div>
         </div>
       <% end %>
