--- a/app/assets/stylesheets/components/_bag_index.scss
+++ b/app/assets/stylesheets/components/_bag_index.scss
@@ -7,10 +7,8 @@
   }
 }
 
-
 .content {
   text-align: center;
-  padding-top: 7px;
 }
 
 .img-bag {
@@ -18,7 +16,20 @@
   height: 200px;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 10px;
   margin-bottom: 10px;
   object-fit: contain;
+}
+
+.content > h4 {
+  margin-bottom: 0px;
+  padding-top: 10px;
+}
+
+.content > h3 {
+  margin-bottom: 0px;
+  padding-top: 10px;
+}
+
+#pricetag {
+  padding-bottom: 20px;
 }
